package com.directi.training.dip.exercise;

public class Database
{
    public int write(String inputString);
}
